# Tempmail

./: .env.example  .gitignore  .htaccess  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  email_service.py  email_utils.py  mail_tm_service.py  models.py  pyproject.toml  replit.md  requirements.txt  robots.txt  routes.py  sitemap.xml  temp_emails.json  utils.py  wsgi.py
.github/workflows/: deploy.yml
attached_assets/: Pasted-Sure-Here-s-a-project-breakdown-for-building-a-temporary-email-and-phone-number-service-website--1752863622702_1752863622703.txt
instance/: tempmail.db
static/: robots.txt  sitemap.xml
static/css/: custom.css  responsive.css  security.css
static/js/: main.js
templates/: about.html  base.html  email_inbox.html  index.html  privacy.html  terms.html
