[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-limiter>=3.12",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "twilio>=9.6.5",
    "werkzeug>=3.1.3",
    "flask-mail>=0.10.0",
    "sqlalchemy>=2.0.41",
    "requests>=2.32.4",
]
